# out-of-the-box

./: .dockerignore  .gitignore  CONTRIBUTOR.md  LICENSE  Makefile  README.md  compose.dev.yaml  compose.prod.yaml  env.example  package-lock.json  package.json
srcs/backend/: api_docuementation.md  pyproject.toml  pytest.ini  requirements.txt
srcs/backend/apps/api/: urls.py
srcs/backend/apps/events/: admin.py  apps.py  conftest.py  middleware.py  models.py  serializers.py  urls.py  views.py
srcs/backend/apps/events/migrations/: 0001_initial.py  0002_page.py  0003_page_button_link_page_button_text_page_date_and_more.py  0004_rename_button_link_page_cta_button_link_and_more.py  0005_rename_cta_button_link_page_button_link_and_more.py  0006_rename_page_fields.py  0007_rename_main_title_page_main_green_title_and_more.py  0008_rename_event_date_page_end_event_date_and_more.py  0009_concertos_exposicoes_projecoes_semanalabia_and_more.py  0010_remove_page_url.py  0011_make_image_fields_optional.py  0012_cinema_sunsettalks_delete_palestras_delete_projecoes.py  0013_speedhunting_category_and_more.py  0014_workshops_category_alter_speedhunting_category.py  0015_remove_workshops_image.py  0016_sunsettalks_category_sunsettalks_category_other.py  0017_exposicoes_area_to_category.py  0018_allow_blank_required_fields.py  0019_add_area_fields.py  0019_cinema_is_highlight_concertos_is_highlight_and_more.py  0020_cinema_is_highlight_concertos_is_highlight_and_more.py  0025_add_priority_field.py  (+4 more)
srcs/backend/core/: settings.py  urls.py
srcs/backend/core/tests/: test_test.py
(+129 files in other folders)
